--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<!--<meta name="viewport" content="width=device-width, inicial-scale=1.">-->
-	<title>Curso Modular de Música</title>>
+	<title>Curso Modular de Música</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-</head>>
+</head>
 <body>
 <header>
 	<h1 class="site-title">Curso Modular de Música</h1>
